# 1284-sds-advml

./: .gitignore  .gitmodules  README.md  _config.yml  index.md  pyproject.toml  references.bib
.github/workflows/: gh-pages.yaml
contents/sec1/: numpy.ipynb
contents/sec2/: exercise-ogura.ipynb
