[project]
name = "sdsadvml"
version = "1.0.0"
description = "Advanced machine learning course in Hitotsubashi University"
authors = [{ name = "Tatsuya Yatagawa", email = "tatsy.mail@gmail.com" }]
readme = "README.md"
license = "CC-BY-NC-SA-4.0"
requires-python = ">=3.10"

dependencies = [
  "bokeh>=3.8.0",
  "colorama>=0.4.6",
  "docutils>=0.17.1",
  "ffmpeg>=1.4",
  "gymnasium[classic-control]>=1.2.0",
  "ipykernel>=6.30.1",
  "ipywidgets>=8.1.7",
  "jupyter-bokeh>=4.0.5",
  "jupyter-book>=1.0.3",
  "jupyterlab-widgets>=3.0.15",
  "lxml>=6.0.2",
  "matplotlib>=3.10.6",
  "networkx>=3.4.2",
  "nodejs>=0.1.1",
  "numpy>=2.2.6",
  "opencv-python>=4.11.0.86",
  "openpyxl>=3.1.5",
  "pandas>=2.0.0",
  "pydata-sphinx-theme==0.15.4",
  "pytest>=8.4.2",
  "scikit-image>=0.25.2",
  "scikit-learn>=1.7.2",
  "scipy>=1.15.3",
  "seaborn>=0.13.2",
  "sphinxcontrib-sass>=0.3.5",
  "tqdm>=4.67.1",
  "torch (>=2.6.0,<2.7.0)",
  "torchvision (>=0.21.0,<0.22.0)",
  "sphinx (>=7.0.0,<8.0.0)",
  "japanize-matplotlib>=1.1.3",
  "advml",
  "othello",
]

[project.urls]
Homepage = "https://tatsy.github.io/1284-sds-ml-advanced/"
Repository = "https://github.com/tatsy/1284-sds-ml-advanced.git"

[tool.uv.sources]
advml = { path = "modules/advml", editable = true }
othello = { path = "modules/othello", editable = true }
torch = [
  { marker = "sys_platform == 'win32'", index = "pytorch-cu124" },
  { marker = "sys_platform == 'linux'", index = "pytorch-cu124" },
  { marker = "sys_platform == 'darwin'", index = "pytorch-cpu" },
]
torchvision = [
  { marker = "sys_platform == 'win32'", index = "pytorch-cu124" },
  { marker = "sys_platform == 'linux'", index = "pytorch-cu124" },
  { marker = "sys_platform == 'darwin'", index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
length-sort = true
length-sort-straight = true

[tool.mypy]
python_version = "3.11"
follow_imports = "silent"
plugins = ["numpy.typing.mypy_plugin"]
disallow_any_generics = true
strict_optional = true
check_untyped_defs = true
allow_redefinition = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
